--- a/Class_Work/matrixEffect/index.html
+++ b/Class_Work/matrixEffect/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p>Welcome to main cohort 2.0</p>
+  <p>Welcome to shuffle effect</p>
   
   <script src="script.js"></script>
 </body>
