--- a/Class_Work/matrixEffect/index.html
+++ b/Class_Work/matrixEffect/index.html
@@ -7,7 +7,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p>Welcome to shuffle effect</p>
+
+  <main>
+    <div class="box">
+      <img src="https://images.unsplash.com/photo-1507752533523-5186b0bc4c43?q=80&w=1471&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+
+      <div class="tag">
+        <div class="tag-upper">Just DO </div>
+        <div class="tag-lower">Whatever You want ! </div>
+      </div>
+    </div>
+   
+  </main>
+  
   
   <script src="script.js"></script>
 </body>
