--- a/Assigment/Day50/index.html
+++ b/Assigment/Day50/index.html
@@ -23,34 +23,67 @@
               <button class="Follow-btn">Follow</button>
             </div>
             <div class="des">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
-<div class="corner">
+            <div class="corner">
 
-  <div class="love">
-    <i class="ri-heart-3-line"></i>
-    <h4>234</h4>
-  </div>
+              <div class="love">
+                <i class="ri-heart-3-line"></i>
+                <h4>234</h4>
+              </div>
 
-  <div class="comment">
-    <i class="ri-chat-3-line"></i>
-    <h4>24</h4>
-  </div>
+              <div class="comment">
+                <i class="ri-chat-3-line"></i>
+                <h4>24</h4>
+              </div>
 
-  <div class="share">
-    <i class="ri-send-plane-fill"></i>
-    <h4>20</h4>
-  </div>
+              <div class="share">
+                <i class="ri-send-plane-fill"></i>
+                <h4>20</h4>
+              </div>
 
-  <div class="menu">
-    <i class="ri-more-2-fill"></i>
-  </div>
-</div>
-            
+              <div class="menu">
+                <i class="ri-more-2-fill"></i>
+              </div>
+            </div>
+          </div>
+          </div>
+        <div class="reels">
+          <video src="./video/video1.mp4" autoplay muted loop></video>
+          <div class="bottom">
+            <div class="bottom-up">
+              <img src="https://wallpapers.com/images/hd/pretty-profile-pictures-526voksmtgllopn4.jpg"
+                alt="profile images">
+              <h4 class="profile-name">Aman Kumar</h4>
+              <button class="Follow-btn">Follow</button>
+            </div>
+            <div class="des">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+            <div class="corner">
+
+              <div class="love">
+                <i class="ri-heart-3-line"></i>
+                <h4>234</h4>
+              </div>
+
+              <div class="comment">
+                <i class="ri-chat-3-line"></i>
+                <h4>24</h4>
+              </div>
+
+              <div class="share">
+                <i class="ri-send-plane-fill"></i>
+                <h4>20</h4>
+              </div>
+
+              <div class="menu">
+                <i class="ri-more-2-fill"></i>
+              </div>
+            </div>
+          </div>
           </div>
         </div>
     </section>
   </main>
 
-  
+
   <script src="script.js"></script>
 </body>
 
